# community-robot-lib

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  build.sh  def.bzl  go.mod  go.sum  image.bzl
config/: BUILD.bazel  config_agent.go  plugin_for_repo.go  repo_filter.go
deploy-plugin/: app_config.yaml  deployment.yaml  service.yaml
giteeclient/: BUILD.bazel  bot_comments.go  client.go  converter.go  error.go  interface.go  issue_event.go  note_event.go  util.go  webhooks.go
giteeplugin/: BUILD.bazel  dispatcher.go  handlers.go  plugin.go
githubclient/: BUILD.bazel  client.go  event.go  hmac.go  interface.go  links.go  utils.go  webhooks.go
gitlabclient/: client.go  interface.go  utils.go  webhooks.go
image/: BUILD
interrupts/: BUILD.bazel
kafka/: BUILD.bazel  default.go  event.go  group.go  kafka.go  kafka_test.go
logrusutil/: BUILD.bazel  logrusutil.go
mq/: BUILD.bazel  config.go
new-plugin/: .gitignore  BUILD.bazel  WORKSPACE  build.sh  new-plugin.sh
new-plugin/giteeplugin/: bot.go  main.go  robot.go
new-plugin/publish/: command_status.sh
options/: BUILD.bazel  gitee.go  github.go  gitlab.go  plugin.go  robot.go  service.go
plugin/: BUILD.bazel  config_agent.go  dispatcher.go  handlers.go  option.go  plugin.go  util.go
plugin/interrupts/: BUILD.bazel
robot-gitee-framework/: BUILD.bazel  dispatcher.go  handlers.go  service.go
robot-gitee-framework-python/: __init__.py  dispatcher.py  handlers.py  log.py  requirements.txt  service.py  setup.py
robot-gitee-framework-python/client/: __init__.py  client.py
robot-gitee-framework-python/robotgitee/: __init__.py
robot-gitee-framework-python/robotgitee/client/: __init__.py  impl.py  interface.py
robot-gitee-framework-python/robotgitee/framework/: __init__.py  dispatcher.py  handlers.py  service.py
robot-gitee-framework-python/robotgitee/logutil/: __init__.py  log.py
robot-gitee-framework1/: dispatcher.go  handlers.go  service.go
robot-gitee-template/: BUILD.bazel  Dockerfile  build.sh
robot-gitee-template-python/basic/: main.py  robot.py
robot-gitee-template/basic/: config.go  main.go  robot.go
robot-gitee-template/basic1/: main.go  robot.go
robot-github-framework/: BUILD.bazel  dispatcher.go  handlers.go  service.go
robot-github-template/basic/: main.go  robot.go
robot-gitlab-framework/: dispatcher.go  handlers.go  service.go
robot-gitlab-template/basic/: main.go  robot.go
secret/: BUILD.bazel  agent.go  agent_test.go  secret.go
tools/: deploy_plugin.sh  new-plugin.sh  new_plugin.sh  new_robot.sh
utils/: BUILD.bazel  httpclient.go  json_check.go  multi_error.go  timer.go  util.go
