load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "error.go",
        "interface.go",
        "note_event.go",
        "util.go",
        "webhooks.go",
    ],
    importpath = "github.com/opensourceways/robot-gitee-plugin-lib/giteeclient",
    visibility = ["//visibility:public"],
    deps = [
        "@com_gitee_openeuler_go_gitee//gitee:go_default_library",
        "@com_github_antihax_optional//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_apimachinery//pkg/util/sets:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
