load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "default.go",
        "kafka.go",
    ],
    importpath = "github.com/opensourceways/community-robot-lib/kafka",
    visibility = ["//visibility:public"],
    deps = [
        "//mq:go_default_library",
        "//utils:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_shopify_sarama//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["kafka_test.go"],
    embed = [":go_default_library"],
    deps = ["//mq:go_default_library"],
)
