load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "codec.go",
        "config.go",
        "mq.go",
        "options.go",
    ],
    importpath = "github.com/opensourceways/community-robot-lib/mq",
    visibility = ["//visibility:public"],
    deps = ["@com_github_sirupsen_logrus//:go_default_library"],
)
