load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "config_agent.go",
        "dispatcher.go",
        "handlers.go",
        "option.go",
        "plugin.go",
        "util.go",
    ],
    importpath = "github.com/opensourceways/robot-gitee-plugin/plugin",
    visibility = ["//visibility:public"],
    deps = [
        "//giteeclient:go_default_library",
        "//plugin/interrupts:go_default_library",
        "@com_gitee_openeuler_go_gitee//gitee:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_sigs_yaml//:go_default_library",
    ],
)
