load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "dispatcher.go",
        "handlers.go",
        "plugin.go",
        "util.go",
    ],
    importpath = "github.com/opensourceways/robot-gitee-plugin-lib/plugin",
    visibility = ["//visibility:public"],
    deps = [
        "//config:go_default_library",
        "//giteeclient:go_default_library",
        "//options:go_default_library",
        "//plugin/interrupts:go_default_library",
        "@com_gitee_openeuler_go_gitee//gitee:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
