load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "dispatcher.go",
        "handlers.go",
        "service.go",
    ],
    importpath = "github.com/opensourceways/community-robot-lib/robot-gitee-framework",
    visibility = ["//visibility:public"],
    deps = [
        "//config:go_default_library",
        "//interrupts:go_default_library",
        "//options:go_default_library",
        "@com_github_opensourceways_go_gitee//gitee:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
