load("@github_opensourceways_community_robot_lib//:image.bzl", "build_plugin_image", "push_image", "image_tags")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix {REPO_PATH}
gazelle(name = "gazelle")

build_plugin_image(
    name = "image",
    plugin = "{ROBOT_NAME}",
)

push_image(
    name = "push_image",
    images = image_tags(
        target = ":image",
    ),
)
