load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "httpclient.go",
        "multi_error.go",
        "timer.go",
        "util.go",
    ],
    importpath = "github.com/opensourceways/community-robot-lib/utils",
    visibility = ["//visibility:public"],
)
